# Legal-Knowledge-System

./: .gitignore  README.md  main.py  pyproject.toml
Legal_Knowledge_System/: manage.py
Legal_Knowledge_System/Legal_Knowledge_System/: asgi.py  settings.py  urls.py  wsgi.py
Legal_Knowledge_System/app/: admin.py  models.py  utils.py  views.py
Legal_Knowledge_System/app/migrations/: 0001_initial.py
Legal_Knowledge_System/app/static/css/: base.css  caselist.css  chat.css  detail.css  index.css  lawdetail.css  lawlist.css  login.css  searchbar.css  user_detail.css
Legal_Knowledge_System/app/static/js/: caselist.js  chat.js  lawlist.js  login.js
Legal_Knowledge_System/app/static/plugins/: marked.min.js
Legal_Knowledge_System/app/templates/: base.html  case_detail.html  cases.html  chat.html  document_template_detail.html  document_templates.html  footer.html  index.html  law_detail.html  lawlist.html  laws.html  login.html  navbar.html  user_detail.html
Legal_Knowledge_System/app/templates/components/: caselist.html  document_templatelist.html  footer.html  lawlist.html  navbar.html  searchbar.html  viewfile.html  viewtext.html
legal_chatbot/: __init__.py  bot.py  chain.py  prompt.py  setup.py  vector_db.py
legal_chatbot/legal_chatbot/: __init__.py  bot.py  config.py  history.py  parse.py  prompt.py  vector_db.py
