[tool.poetry]
name = "legal-knowledge-system"
version = "0.1.0"
description = ""
authors = ["白石 <572268633@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
langchain = "^0.3.7"
langchain-community = "^0.3.7"
langchain-openai = "^0.2.8"
openai = "^1.54.4"
lxml = "^5.3.0"
pymysql = "^1.1.1"
ctransformers = "^0.2.27"
langchain-experimental = "^0.3.3"
mysqlclient = "^2.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
