[tool.poetry]
name = "legal-knowledge-system"
version = "0.1.0"
description = ""
authors = ["白石 <572268633@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
langchain = "^0.3.10"
langchain-community = "^0.3.10"
langchain-openai = "^0.2.11"
openai = "^1.57.0"
lxml = "^5.3.0"
pymysql = "^1.1.1"
ctransformers = "^0.2.27"
langchain-experimental = "^0.3.3"
mysqlclient = "^2.2.6"
docx2txt = "^0.8"
python-docx = "^1.1.2"
pypiwin32 = "^223"
pypdf = "^5.1.0"
sentence-transformers = "^3.3.1"
chromadb = "^0.5.23"
langchain-huggingface = "^0.1.2"
langchain-chroma = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
